--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
-.navigation{
+/* Navigation styles */
+.navigation {
     display: grid;
-    grid-template-columns:1fr 1fr 1fr; 
-    background: linear-gradient(to right, grey, #352b2b); 
+    grid-template-columns: 1fr 1fr 1fr;
+    background: linear-gradient(to right, grey, #352b2b);
     padding: 1em;
 }
 
@@ -9,19 +10,75 @@
     text-align: center;
     color: white;
     text-decoration: none;
-}
-.headings{
-    text-align: center;
-
+    border: double white 2px;
 }
 
 .nav-item:hover {
-    background-color: rgba(0, 0, 0, 0.75);;
+    background-color: rgba(0, 0, 0, 0.75);
 }
-a{
+
+a {
     color: white;
 }
-body{
-    text-align: center;
 
+body {
+    font-family: 'Comic Sans MS', cursive;
+    text-align: center;
+    margin: 20px;
 }
+
+form {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input,
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button {
+    background: linear-gradient(to right, grey, #352b2b);
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: solid 1.5px black;
+    font-size: 16px;
+}
+p {
+    margin-left: 20%;
+    margin-right: 20%;
+}
+ul {
+    margin-left: 25%;
+    margin-right: 25%;
+}
+img{
+    width: 300px;
+    height: 250px;
+}
+
+@media screen and (max-width: 500px) {
+    p {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    ul {
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+}
+    
