--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ form {
     max-width: 600px;
     margin: 0 auto;
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
 }
 
 label {
@@ -42,7 +42,8 @@ label {
 }
 
 h1{
-    border-bottom: solid black 1px;
+    padding-bottom: 5px;
+    border-bottom: dotted black 1px;
 }
 input,
 select {
@@ -74,6 +75,8 @@ ul {
 img{
     width: 300px;
     height: 250px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 @media screen and (max-width: 500px) {
