--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Navigation styles */
 .navigation {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -41,12 +40,14 @@ label {
     margin-bottom: 8px;
 }
 
-h1{
+h1 {
     padding-bottom: 5px;
     border-bottom: dotted black 1px;
 }
+
 input,
 select {
+    text-align: center;
     width: 100%;
     padding: 10px;
     margin-bottom: 16px;
@@ -63,16 +64,19 @@ button {
     border: solid 1.5px black;
     font-size: 16px;
 }
+
 p {
     margin-left: 20%;
     margin-right: 20%;
-    
+
 }
+
 ul {
     margin-left: 25%;
     margin-right: 25%;
 }
-img{
+
+img {
     width: 300px;
     height: 250px;
     padding-top: 10px;
@@ -90,4 +94,3 @@ img{
         margin-right: 15%;
     }
 }
-    
